# SystemesEmbarques

./: .gitignore  README.md
Projet_SE/lowrisc-chip-DATE2020-DEMO/fpga/bare_metal/cnn_riscv_mancini/: CMakeLists.txt  README.md
Projet_SE/lowrisc-chip-DATE2020-DEMO/fpga/bare_metal/cnn_riscv_mancini/include/: argmax.h  biases_cifar.h  cnn_type.h  coeffs.h  coeffs_cifar.h  coeffs_double.h  convolution.h  flush_mem.h  maxIndice.h  maxpool.h  normalisation.h  perceptron.h  reshape.h  softmax.h  testimage.h  top_cnn_mancini.h  types.h
Projet_SE/lowrisc-chip-DATE2020-DEMO/fpga/bare_metal/cnn_riscv_mancini/src/: CNN.c  CNN.cpp  convolution.c  convolution.cpp  maxIndice.c  maxpool.c  maxpool.cpp  normalisation.cpp  overlays.c  perceptron.c  reshape.cpp  softmax.cpp  top_cnn_mancini.c  top_cnn_mancini.cpp
Projet_SE/lowrisc-chip-DATE2020-DEMO/fpga/bare_metal/cnn_riscv_mancini/testCpp/: CNN.c  CNN.cpp  imagesMem.h
Projet_SE/lowrisc-chip-DATE2020-DEMO/fpga/bare_metal/examples/: Makefile  Makefile.bu  application.c  date2020_config.h
Projet_SE/lowrisc-chip-DATE2020-DEMO/pontar_python/: compt_overlay.py
